Bug 531151 - Increase Annotation Service robustness, r=dietrich