toolkit/components/places/tests/unit/test_annotations.js
@@ -140,6 +140,7 @@ function run_test() {
 
   // test getPagesWithAnnotation
   var uri2 = uri("http://www.tests.tld");
+  histsvc.addVisit(uri2, Date.now() * 1000, null, histsvc.TRANSITION_TYPED, false, 0);
   annosvc.setPageAnnotation(uri2, testAnnoName, testAnnoVal, 0, 0);
   var pages = annosvc.getPagesWithAnnotation(testAnnoName);
   do_check_eq(pages.length, 2);
@@ -191,13 +192,58 @@ function run_test() {
   do_check_eq(annoNames.length, 1);
   do_check_eq(annoNames[0], "moz-test-places/annotations");
 
-  /* copy annotations to another uri
+  // copy annotations to another uri
   var newURI = uri("http://mozilla.org");
+  histsvc.addVisit(newURI, Date.now() * 1000, null, histsvc.TRANSITION_TYPED, false, 0);
+  annosvc.setPageAnnotation(testURI, "oldAnno", "new", 0, 0);
+  annosvc.setPageAnnotation(newURI, "oldAnno", "old", 0, 0);
+  var annoNames = annosvc.getPageAnnotationNames(newURI);
+  do_check_eq(annoNames.length, 1);
+  do_check_eq(annoNames[0], "oldAnno");
   var oldAnnoNames = annosvc.getPageAnnotationNames(testURI);
-  annosvc.copyAnnotations(testURI, newURI, false);
+  do_check_eq(oldAnnoNames.length, 2);
+  var copiedAnno = oldAnnoNames[0];
+  annosvc.copyPageAnnotations(testURI, newURI, false);
   var newAnnoNames = annosvc.getPageAnnotationNames(newURI);
-  do_check_eq(oldAnnoNames.length, newAnnoNames.length);
-  */
+  do_check_eq(newAnnoNames.length, 2);
+  do_check_true(annosvc.pageHasAnnotation(newURI, "oldAnno"));
+  do_check_true(annosvc.pageHasAnnotation(newURI, copiedAnno));
+  do_check_eq(annosvc.getPageAnnotation(newURI, "oldAnno"), "old");
+  annosvc.setPageAnnotation(newURI, "oldAnno", "new", 0, 0);
+  annosvc.copyPageAnnotations(testURI, newURI, true);
+  newAnnoNames = annosvc.getPageAnnotationNames(newURI);
+  do_check_eq(newAnnoNames.length, 2);
+  do_check_true(annosvc.pageHasAnnotation(newURI, "oldAnno"));
+  do_check_true(annosvc.pageHasAnnotation(newURI, copiedAnno));
+  do_check_eq(annosvc.getPageAnnotation(newURI, "oldAnno"), "new");
+
+
+  // copy annotations to another item
+  var newURI = uri("http://mozilla.org");
+  var newItemId = bmsvc.insertBookmark(bmsvc.bookmarksMenuFolder, newURI, -1, "");
+  var itemId = bmsvc.insertBookmark(bmsvc.bookmarksMenuFolder, testURI, -1, "");
+  annosvc.setItemAnnotation(itemId, "oldAnno", "new", 0, 0);
+  annosvc.setItemAnnotation(itemId, "testAnno", "test", 0, 0);
+  annosvc.setItemAnnotation(newItemId, "oldAnno", "old", 0, 0);
+  var annoNames = annosvc.getItemAnnotationNames(newItemId);
+  do_check_eq(annoNames.length, 1);
+  do_check_eq(annoNames[0], "oldAnno");
+  var oldAnnoNames = annosvc.getItemAnnotationNames(itemId);
+  do_check_eq(oldAnnoNames.length, 2);
+  var copiedAnno = oldAnnoNames[0];
+  annosvc.copyItemAnnotations(itemId, newItemId, false);
+  var newAnnoNames = annosvc.getItemAnnotationNames(newItemId);
+  do_check_eq(newAnnoNames.length, 2);
+  do_check_true(annosvc.itemHasAnnotation(newItemId, "oldAnno"));
+  do_check_true(annosvc.itemHasAnnotation(newItemId, copiedAnno));
+  do_check_eq(annosvc.getItemAnnotation(newItemId, "oldAnno"), "old");
+  annosvc.setItemAnnotation(newItemId, "oldAnno", "new", 0, 0);
+  annosvc.copyItemAnnotations(itemId, newItemId, true);
+  newAnnoNames = annosvc.getItemAnnotationNames(newItemId);
+  do_check_eq(newAnnoNames.length, 2);
+  do_check_true(annosvc.itemHasAnnotation(newItemId, "oldAnno"));
+  do_check_true(annosvc.itemHasAnnotation(newItemId, copiedAnno));
+  do_check_eq(annosvc.getItemAnnotation(newItemId, "oldAnno"), "new");
 
   // test int32 anno type
   var int32Key = testAnnoName + "/types/Int32";
